api/chat/k8s/local-cluster/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - protocol: http
      port: 80
      targetPort: 8080
